--- a/index.Rmd
+++ b/index.Rmd
@@ -112,6 +112,38 @@ top_tweets <- userconf_tweets %>%
   slice_max(popularity, n = 10, with_ties = FALSE)
 ```
 
+```{r timeline_data, include=FALSE, cache=TRUE}
+try(Sys.setlocale("LC_TIME", "C"), silent = TRUE)
+
+tweets_by_day <- userconf_tweets %>% 
+  ts_data(by = "days") %>%
+  mutate(weekday = wday(time, label = TRUE, abbr = TRUE),
+         myear = format(time, format = "%b %Y"),
+         week = format(time, format = "%U")) %>% 
+  rename(tweets = n)
+
+likes_by_day <- userconf_tweets %>% 
+  select(created_at, favorite_count) %>% 
+  group_by(floor_date(created_at, "day")) %>% 
+  summarise(n = sum(favorite_count, na.rm = TRUE)) %>% 
+  ungroup() %>% 
+  setNames(c("time", "likes")) %>% 
+  filter(!is.na(time))
+
+rts_by_day <- userconf_tweets %>% 
+  select(created_at, retweet_count) %>% 
+  group_by(floor_date(created_at, "day")) %>% 
+  summarise(n = sum(retweet_count, na.rm = TRUE)) %>% 
+  ungroup() %>% 
+  setNames(c("time", "retweets")) %>% 
+  filter(!is.na(time))
+
+by_day_metrics <- tweets_by_day %>% 
+  left_join(rts_by_day, by = "time") %>% 
+  left_join(likes_by_day, by = "time") %>% 
+  tidyr::replace_na(replace = list(likes = 0, retweets = 0))
+```
+
 
 Home {data-icon="ion-home"}
 ====
@@ -149,7 +181,81 @@ Row {.tabset .tabset-fade}
 ### Tweet volume
 
 ```{r tweet_volume}
-plot_tweet_volume(count_timeseries)
+mycolor <- c("#2780e3", "#003636", "#a9a9a9", "#91c8c8")
+this_month <- lubridate::floor_date(today(), "month")
+by_day_metrics %>%
+  e_charts(time) %>%
+  e_area(tweets, name = "Number of Tweets", stack = "grp") %>%
+  e_area(retweets, name = "Number of Retweets", stack = "grp") %>%
+  e_area(likes, name = "Number of Likes", stack = "grp") %>%
+  e_tooltip(trigger = "axis") %>%
+  e_y_axis(
+    splitArea = list(show = TRUE),
+    axisPointer = list(
+      show = FALSE,
+      lineStyle = list(
+        color = "#999999",
+        width = 0.75,
+        type = "dotted"
+      )
+    )
+  ) %>%
+  echarts4r::e_x_axis(
+      type = "time",
+      formatter = htmlwidgets::JS(
+        "function(value){
+        let date = new Date(value);
+
+        label = `${date.getDate()}-${(parseInt(date.getMonth()) + 1)}-${date.getFullYear()}`;
+        return label;
+      }"
+      )
+    ) %>%
+  e_toolbox_feature(feature = "magicType",
+                    type = list("area", "line", "bar")) %>%
+  e_toolbox_feature("restore") %>%
+  e_toolbox_feature(feature = "reset") %>%
+  e_toolbox_feature("saveAsImage") %>%
+  e_animation(duration = 1000) %>%
+  echarts4r::e_color(mycolor) %>%
+  echarts4r::e_tooltip(
+    trigger = "axis",
+    formatter = htmlwidgets::JS("
+  function(params) {
+    let date = new Date(params[0].value[0] + 'T00:00:00')
+    let options = { year: 'numeric', month: 'short', day: 'numeric', hour: 'numeric'}
+    let title = `<strong>${date.toLocaleDateString('en-US', options=options)}</strong>`
+    let num = `${params[0].value[1]} tweets</br>`
+    let num2 = `${params[1].value[1]} retweets</br>`
+    let num3 = `${params[2].value[1]} likes</br>`
+    return(`${title}</br>${num+num2+num3}`);
+  }"
+    )
+  ) %>%
+  echarts4r::e_datazoom(type = "slider") %>%
+  echarts4r::e_zoom(dataZoomIndex = 0,
+                    start = 70,
+                    end = 100) %>%
+  echarts4r::e_zoom(
+    dataZoomIndex = 0,
+    startValue = today() - 7,
+    endValue = today(),
+    btn = "weekBtn"
+  ) %>%
+  echarts4r::e_zoom(
+    dataZoomIndex = 0,
+    startValue = this_month,
+    endValue = today(),
+    btn = "monthBtn"
+  ) %>%
+  echarts4r::e_button(id = "weekBtn",
+                      position = "top",
+                      class = "btn btn-primary btn-sm",
+                      "This Week") %>%
+  echarts4r::e_button(id = "monthBtn",
+                      position = "top",
+                      class = "btn btn-primary btn-sm",
+                      "This Month")
 ```
 
 ### Tweets by Hour of Day
