--- a/index.Rmd
+++ b/index.Rmd
@@ -9,6 +9,7 @@ output:
       bootswatch: cosmo
     self_contained: false
     css: styles/main.css
+    favicon: "https://user2021.r-project.org//favicon-32x32.png"
     includes:
       after_body: fragments/footer.html
 ---
